--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,19 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <header class="header">
+      <div class="nav">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a class="nav-link" href="./1-gallery.html">Gallery</a>
+          </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="./2-form.html">Form</a>
+          </li>
+        </ul>
+      </div>
+    </header>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
